inference-gw/lab-04/body-routing-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: single-qwen-route
  namespace: default
spec:
  parentRefs:
  - name: single-inference-gateway
    kind: Gateway
  rules:
  - matches:
    - headers:
      - type: Exact
        name: X-Gateway-Model-Name
        value: Qwen/Qwen3-8B
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: qwen-pool
      port: 8000
