inference-gw/lab-04/config-single-gateway_template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: single-inference-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-rilb
  addresses:
  - type: NamedAddress
    value: "qwen-single-gateway-ip-${SINGLE_GATEWAY_REGION}"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: single-qwen-route
  namespace: default
spec:
  parentRefs:
  - name: single-inference-gateway
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: qwen-pool
      port: 8000
